--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-﻿customtkinter==5.2.2
-scrapy==2.11.0
-spacy==3.4.2
-tqdm==4.66.1
-selenium==4.23.1
-beautifulsoup4==4.12.3
-webdriver-manager==3.8.6
-numpy==1.23.5
-requests
+﻿customtkinter~=5.2
+scrapy~=2.13
+spacy~=3.8
+tqdm~=4.67
+selenium~=4.38
+beautifulsoup4~=4.14
+webdriver-manager~=4.0
+numpy~=2.2
+requests~=2.32
